--- a/aomap.html
+++ b/aomap.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -12,6 +13,9 @@
 
   <body class="claro">
   <h1>Web Map</h1>
-    <div id="map"></div>
+
+<div id="map"></div>
+<div id="mapDiv"></div>
+<div id="legendDiv"></div>
   </body>
 </html>
