--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/>
     <title>Simple Map</title>
     <link rel="stylesheet" href="https://js.arcgis.com/3.20/esri/css/esri.css">
-    <link rel="stylesheet" href="/styles/style.css" type="text/css" />
+    <!--link rel="stylesheet" href="/styles/style.css" type="text/css" /-->
     <script src="https://js.arcgis.com/3.20/"></script>
     <script src="/scripts/app.js"></script>
   </head>
