--- a/query.html
+++ b/query.html
@@ -7,11 +7,17 @@
     <link rel="stylesheet" href="https://js.arcgis.com/3.20/esri/css/esri.css">
     <!--link rel="stylesheet" href="/styles/style.css" type="text/css" /-->
     <script src="https://js.arcgis.com/3.20/"></script>
-    <script src="/scripts/app.js"></script>
+    <script src="/scripts/query.js"></script>
   </head>
 
   <body class="claro">
-    <h1>Web Map</h1>
+  <h1>Web Map</h1>
+   <select id="population" name="population">
+      <option value="" selected="selected">Select a population</option>
+      <option value="2500">2,500</option>
+      <option value="5000">5,000</option>
+      <option value="7500">7,500</option>
+    </select>
     <div id="map"></div>
   </body>
 </html>
