draw polygon to select and query

--- a/featurelayer.html
+++ b/featurelayer.html
@@ -11,6 +11,9 @@
       <option value="5000">5,000</option>
       <option value="7500">7,500</option>
     </select>
+
+    <input name="drawPolygon" type="button" id="drawPolygon" value="Draw" class="button"/>
+
     <div id="map"></div>
     <script type="text/javascript"
       src="http://js.arcgis.com/3.11/"></script>
